<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="#FFFFFF"
        >

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/main_product_image"
            android:scaleType="fitCenter"
            android:src="@drawable/bvlogo_500x500" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        >

    <LinearLayout
        android:id="@+id/linearLayoutProdInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/productName"
        android:baselineAligned="false" >

        <LinearLayout
            android:id="@+id/linearLayoutBrand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" >

            <TextView
                android:id="@+id/productBrand"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/brandText"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" 
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" >

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/priceText"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" 
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingRight="10dp" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:id="@+id/scrollViewProductDescription" 
            android:layout_alignLeft="@+id/linearLayoutProdInfo"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/linearLayoutProdInfo"
            android:layout_below="@+id/linearLayoutProdInfo">
        
	    <TextView
	        android:id="@+id/productDescription"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/productDesc" 
	        android:paddingTop="5dp" 
	        android:paddingBottom="5dp"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp" />
    </ScrollView>    
                
    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/productNameText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" 
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" 
        android:textColor="@color/bv_light_green" />
        
    </RelativeLayout> 
</LinearLayout>